correct spacing

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ div#timeline-1 {
 }
 
 .details{
-  margin-top: -35px;
+  margin-top: -20px;
 }
 
 .timeline__content-title {
